<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.loops.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_songsList"
        android:name="com.example.loops.fragments.songList.SongListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_songlist" />

    <fragment
        android:id="@+id/navigation_cloud_music"
        android:name="com.example.loops.fragments.cloudSongList.cloudSongListFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_cloudSongList" />
</navigation>